--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "uuid": "^9.0.1",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.41",
     "vue-router": "4",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
     "path": "^0.12.7",
