--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "echarts": "^5.4.1",
     "element-plus": "^2.2.28",
     "gsap": "^3.11.4",
+    "highlight.js": "^11.9.0",
     "lodash": "^4.17.21",
+    "markdown-it": "^14.0.0",
+    "markmap-common": "^0.16.0",
+    "markmap-lib": "^0.16.1",
+    "markmap-view": "^0.16.0",
+    "md-editor-v3": "^4.12.1",
     "mockjs": "^1.1.0",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.2.1",
@@ -36,10 +42,12 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/markdown-it": "^13.0.7",
     "@types/node": "^18.11.9",
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
+    "clipboard": "^2.0.11",
     "path": "^0.12.7",
     "postcss": "^8.4.19",
     "rollup-plugin-visualizer": "^5.9.0",
