--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ VITE_MOCK_ENABLED=false
 VITE_API_URL="http://127.0.0.1:3000"
 
 # MODE = "PRO"
-DEV_MODE = true
-DEV_BACKEND_URL = "http://127.0.0.1:5173/api"
-PRODUCTION_BACKEND_URL = "http://127.0.0.1:3000/api"
+DEV_MODE=true
+DEV_BACKEND_URL="/api"
+PRODUCTION_BACKEND_URL="http://127.0.0.1:3000/api"
