--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "animate.css": "^4.1.1",
     "axios": "^1.2.0",
+    "dotenv": "^16.4.5",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.28",
     "gsap": "^3.11.4",
