--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
     "clipboard": "^2.0.11",
+    "cypress": "^13.13.3",
     "path": "^0.12.7",
     "postcss": "^8.4.19",
     "rollup-plugin-visualizer": "^5.9.0",
